# fastapi_sse_events

./: .env.100k_users  .env.example  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  release.sh
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: README.md  index.html  script.js  styles.css
examples/: README.md
examples/crm_comments/: .env.example  .gitignore  README.md  app.py  app_simple.py  app_simple_new.py  client.html  requirements.txt  start.sh  start_simple.sh
examples/production_scale/: Dockerfile  README.md  app.py  docker-compose.yml  load_test.py  load_test_requirements.txt  nginx.conf  prometheus.yml  start.sh
examples/quickstart/: README.md  app.py
fastapi_sse_events/: __init__.py  app.py  broker.py  config.py  decorators.py  fanout.py  fastapi_integration.py  health.py  helpers.py  metrics.py  redis_backend.py  sse.py  types.py
tests/: __init__.py  conftest.py  test_broker.py  test_config.py  test_integration.py  test_redis_backend.py  test_sse.py
