[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-sse-events"
version = "0.2.0"
description = "Server-Sent Events (SSE) notifications for FastAPI with Redis Pub/Sub - Add real-time updates to your REST API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "bhadri01", email = "your.email@example.com"}
]
maintainers = [
    {name = "bhadri01", email = "your.email@example.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
keywords = [
    "fastapi", 
    "sse", 
    "server-sent-events", 
    "redis", 
    "pubsub", 
    "realtime", 
    "notifications",
    "websocket-alternative",
    "push-notification",
    "event-streaming"
]

dependencies = [
    "fastapi>=0.104.0",
    "sse-starlette>=2.0.0",
    "redis[asyncio]>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
server = [
    "uvicorn[standard]>=0.24.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-redis>=4.6.0",
]
all = [
    "fastapi-sse-events[server,dev]",
]

[project.urls]
Homepage = "https://github.com/bhadri01/fastapi_sse_events"
Documentation = "https://bhadri01.github.io/fastapi_sse_events"
Repository = "https://github.com/bhadri01/fastapi_sse_events"
Issues = "https://github.com/bhadri01/fastapi_sse_events/issues"
Changelog = "https://github.com/bhadri01/fastapi_sse_events/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["fastapi_sse_events*"]

[tool.setuptools.package-data]
fastapi_sse_events = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=fastapi_sse_events --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "sse_starlette.*"
ignore_missing_imports = true
